Update contact email

--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -112,7 +112,7 @@
     <p>These Terms are governed by the laws of the United States. Any disputes shall be resolved in the appropriate courts.</p>
 
     <h2>11. Contact</h2>
-    <p>For questions about these Terms, contact us at: <a href="mailto:support@rallyup.app">support@rallyup.app</a></p>
+    <p>For questions about these Terms, contact us at: <a href="mailto:rallyupmotivation@gmail.com">rallyupmotivation@gmail.com</a></p>
 </body>
 </html>
 
