--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -98,7 +98,7 @@
     <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last updated" date.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have questions about this Privacy Policy, please contact us at: <a href="mailto:support@rallyup.app">support@rallyup.app</a></p>
+    <p>If you have questions about this Privacy Policy, please contact us at: <a href="mailto:rallyupmotivation@gmail.com">rallyupmotivation@gmail.com</a></p>
 </body>
 </html>
 
